--- a/car.html
+++ b/car.html
@@ -5,59 +5,60 @@
 	<link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: 'Orbitron', sans-serif;
-            background-color: #1a1a1a;
-            color: #c0c0c0;
+            font-family: 'Arial', sans-serif;
+            background-color: #f4f4f4;
+            color: #333;
             margin: 0;
-            padding: 0;
+            padding: 20px;
         }
 
         #main {
             width: 80%;
             margin: 20px auto;
-            background-color: #262626;
+            background-color: white;
             padding: 20px;
             border-radius: 8px;
-            box-shadow: 0 0 20px rgba(0, 255, 255, 0.5);
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
 
         h1 {
-            color: #00ffff;
+            color: #333;
         }
 
         table {
             width: 100%;
             border-collapse: collapse;
-            background-color: #333;
+            background-color: #fff;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
 
         table, th, td {
-            border: 1px solid #00ffff;
+            border: 1px solid #ddd;
         }
 
         th, td {
             text-align: left;
-            padding: 8px;
+            padding: 12px;
         }
 
         th {
-            background-color: #00ffff;
-            color: #000;
+            background-color: #f4f4f4;
+            color: #333;
         }
 
         button {
-            background-color: #00ffff;
-            color: #000;
             padding: 10px 20px;
+            background-color: #007bff;
+            color: white;
             border: none;
-            border-radius: 4px;
+            border-radius: 5px;
             cursor: pointer;
-            transition: transform 0.3s ease;
+            font-size: 16px;
         }
 
         button:hover {
-            background-color: #008080;
-            transform: scale(1.1);
+            background-color: #0056b3;
         }
 
         @media (max-width: 600px) {
