--- a/seller.html
+++ b/seller.html
@@ -3,67 +3,94 @@
 	<script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
     <style>
-        body {
-            font-family: 'Orbitron', sans-serif;
-            background-color: #1a1a1a;
-            color: #c0c0c0;
-            margin: 0;
-            padding: 0;
-        }
+		body {
+			font-family: 'Arial', sans-serif;
+			background-color: #f4f4f4;
+			color: #333;
+			margin: 0;
+			padding: 20px;
+		}
 
-        #main {
-            width: 80%;
-            margin: 20px auto;
-            background-color: #262626;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 20px rgba(0, 255, 255, 0.5);
-        }
+		#main {
+			width: 80%;
+			margin: 20px auto;
+			background-color: white;
+			padding: 20px;
+			border-radius: 8px;
+			box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+		}
 
-        h1 {
-            color: #00ffff;
-        }
+		h1 {
+			color: #333;
+			margin-bottom: 20px;
+		}
 
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            background-color: #333;
-        }
+		table {
+			width: 100%;
+			border-collapse: collapse;
+			background-color: #fff;
+			border-radius: 8px;
+			box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+		}
 
-        table, th, td {
-            border: 1px solid #00ffff;
-        }
+		table, th, td {
+			border: 1px solid #ddd;
+		}
 
-        th, td {
-            text-align: left;
-            padding: 8px;
-        }
+		th, td {
+			text-align: left;
+			padding: 12px;
+		}
 
-        th {
-            background-color: #00ffff;
-            color: #000;
-        }
+		th {
+			background-color: #f4f4f4;
+			color: #333;
+		}
 
-        button {
-            background-color: #00ffff;
-            color: #000;
-            padding: 10px 20px;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-            transition: transform 0.3s ease;
-        }
+		button {
+			background-color: #007bff;
+			color: white;
+			padding: 10px 20px;
+			border: none;
+			border-radius: 5px;
+			cursor: pointer;
+			transition: background-color 0.3s ease;
+		}
 
-        button:hover {
-            background-color: #008080;
-            transform: scale(1.1);
-        }
+		button:hover {
+			background-color: #0056b3;
+		}
 
-        @media (max-width: 600px) {
-            #main {
-                width: 95%;
-            }
-        }
+		input[type="text"], textarea {
+			width: 100%;
+			padding: 10px;
+			margin-bottom: 10px;
+			border: 1px solid #ddd;
+			border-radius: 5px;
+			box-sizing: border-box;
+		}
+
+		input[type='button'] {
+			background-color: #007bff;
+			color: white;
+			padding: 10px 20px;
+			border: none;
+			border-radius: 5px;
+			cursor: pointer;
+			transition: background-color 0.3s ease;
+		}
+
+		input[type='button']:hover {
+			background-color: #0056b3;
+		}
+
+		@media (max-width: 600px) {
+			#main {
+				width: 95%;
+			}
+		}
+
+
     </style>
 </head>
 	
@@ -74,12 +101,12 @@
 		<h1>{{uID}}的商品列表</h1>
 		<button @click="setAddUI()">新增商品</button><button @click="listorder()">查看訂單</button><!--<button @click="listcart()">查看購物車</button>-->
 		<table border=1>
-			<tr><td>序號</td><td>商品名稱</td><td>價格</td><td>庫存</td><td>查看更多</td><td>修改資訊</td><td>刪除商品</td></tr>
+			<tr><td>序號</td><td>商品名稱</td><td>價格</td><!-- <td>庫存</td> --><td>查看更多</td><td>修改資訊</td><td>刪除商品</td></tr>
 			<tr v-for="product in dat">
 				<td>{{product.pID}}</td>
 				<td>{{product.name}}</td>
 				<td>{{product.price}}</td>
-				<td>{{product.stock}}</td>
+				<!-- <td>{{product.stock}}</td> -->
                 <td><button @click="getProductDetail(product.pID)">詳細資訊</button></td>
 				<td><button @click="setEditUI(product.pID, product.name, product.price, product.stock, product.content)">改</button></td><!--程式要改-->
 				<td><button @click="delProduct(product.pID)">刪</button><!--程式要改-->
@@ -89,7 +116,7 @@
 	<div v-if="UI=='editForm'">
 		商品名稱: <input type="text"  v-model="newproduct.name"/> <br/>
 		價格: <input type="text"  v-model="newproduct.price"/> <br/>
-		庫存: <input type="text"  v-model="newproduct.stock"/> <br/>
+		<!-- 庫存: <input type="text"  v-model="newproduct.stock"/> <br/> -->
 	
 		商品介紹: <textarea v-model="newproduct.content"></textarea><br>
 	
@@ -101,7 +128,7 @@
 
 		商品名稱: <input type="text"  v-model="newproduct.name"/> <br/>
 		價格: <input type="text"  v-model="newproduct.price"/> <br/>
-		庫存: <input type="text"  v-model="newproduct.stock"/> <br/>
+		<!-- 庫存: <input type="text"  v-model="newproduct.stock"/> <br/>> -->
 	
 		商品介紹: <textarea v-model="newproduct.content"></textarea><br>
 	
@@ -112,11 +139,11 @@
 	<div v-if="UI=='detail'" v-for="product in dat">
 		<h1>{{product.name}}</h1>
 		<table border=1>
-			<tr><td>商品名稱</td><td>價格</td><td>庫存</td><td>商品介紹</td></tr>
+			<tr><td>商品名稱</td><td>價格</td><!-- <td>庫存</td>> --><td>商品介紹</td></tr>
 			<tr>
 				<td>{{product.name}}</td>
 				<td>{{product.price}}</td>
-				<td>{{product.stock}}</td>
+				<!-- <td>{{product.stock}}</td> -->
 				<td>{{product.content}}</td>
 				
 	
