--- a/shoppingview.html
+++ b/shoppingview.html
@@ -4,67 +4,78 @@
 	<script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>	
     <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
     <style>
-        body {
-            font-family: 'Orbitron', sans-serif;
-            background-color: #1a1a1a;
-            color: #c0c0c0;
-            margin: 0;
-            padding: 0;
-        }
+		body {
+			font-family: 'Arial', sans-serif;
+			background-color: #f4f4f4;
+			color: #333;
+			margin: 0;
+			padding: 20px;
+		}
 
-        #main {
-            width: 80%;
-            margin: 20px auto;
-            background-color: #262626;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 20px rgba(0, 255, 255, 0.5);
-        }
+		#main {
+			width: 80%;
+			margin: 20px auto;
+			background-color: white;
+			padding: 20px;
+			border-radius: 8px;
+			box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+		}
 
-        h1 {
-            color: #00ffff;
-        }
+		h1 {
+			color: #333;
+			margin-bottom: 20px;
+		}
 
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            background-color: #333;
-        }
+		table {
+			width: 100%;
+			border-collapse: collapse;
+			background-color: #fff;
+			border-radius: 8px;
+			box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+		}
 
-        table, th, td {
-            border: 1px solid #00ffff;
-        }
+		table, th, td {
+			border: 1px solid #ddd;
+		}
 
-        th, td {
-            text-align: left;
-            padding: 8px;
-        }
+		th, td {
+			text-align: left;
+			padding: 12px;
+		}
 
-        th {
-            background-color: #00ffff;
-            color: #000;
-        }
+		th {
+			background-color: #f4f4f4;
+			color: #333;
+		}
 
-        button {
-            background-color: #00ffff;
-            color: #000;
-            padding: 10px 20px;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-            transition: transform 0.3s ease;
-        }
+		button {
+			background-color: #007bff;
+			color: white;
+			padding: 10px 20px;
+			border: none;
+			border-radius: 5px;
+			cursor: pointer;
+			transition: background-color 0.3s ease;
+		}
 
-        button:hover {
-            background-color: #008080;
-            transform: scale(1.1);
-        }
+		button:hover {
+			background-color: #0056b3;
+		}
 
-        @media (max-width: 600px) {
-            #main {
-                width: 95%;
-            }
-        }
+		input[type="text"], textarea {
+			width: 100%;
+			padding: 10px;
+			margin-bottom: 10px;
+			border: 1px solid #ddd;
+			border-radius: 5px;
+			box-sizing: border-box;
+		}
+
+		@media (max-width: 600px) {
+			#main {
+				width: 95%;
+			}
+		}
     </style>
 
 
@@ -80,15 +91,15 @@
 		<h1>{{uID}}的商品列表</h1>
         <button @click="listcart(uID)">查看購物車</button><button @click="listorder(uID)">查看訂單</button>
 		<table border=1>
-			<tr><td>序號</td><td>商品名稱</td><td>商家名稱</td><td>價格</td><td>庫存</td><td>查看更多</td><td>加入購物車</td></tr>
+			<tr><td>序號</td><td>商品名稱</td><td>商家名稱</td><td>價格</td><!-- <td>庫存</td> --><td>查看更多</td><td>加入購物車</td></tr>
 			<tr v-for="product in dat">
 				<td>{{product.pID}}</td>
 				<td>{{product.pName}}</td>
 				<td>{{product.uName}}</td>
 				<td>{{product.price}}</td>
-				<td>{{product.stock}}</td>
-				<td><button @click="getProductDetail(product.pID)">詳細資訊</button></td><!--程式要改-->
-				<td><button @click="addCart(product.pID, uID)">+1</button></td><!--程式要改-->
+				<!-- <td>{{product.stock}}</td> -->
+				<td><button @click="getProductDetail(product.pID)">詳細資訊</button></td>
+				<td><button @click="addCart(product.pID, uID)">加入購物車</button></td>
 			</tr>
 		</table>
 	</div>
@@ -96,11 +107,11 @@
 	<div v-if="UI=='detail'" v-for="product in dat">
 		<h1>{{product.name}}</h1>
 		<table border=1>
-			<tr><td>商品名稱</td><td>價格</td><td>庫存</td><td>商品介紹</td></tr>
+			<tr><td>商品名稱</td><td>價格</td><!-- <td>庫存</td> --><td>商品介紹</td></tr>
 			<tr>
 				<td>{{product.name}}</td>
 				<td>{{product.price}}</td>
-				<td>{{product.stock}}</td>
+				<!-- <td>{{product.stock}}</td> -->
 				<td>{{product.content}}</td>
 			</tr>
 		</table><button @click="back()">回到商品列表</button>
